--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Documentation
+name: Generate DocC
 
 on:
   push:
@@ -15,9 +15,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       
-      - uses: swift-actions/setup-swift@v1
+      - name: Xcode Select
+        uses: devbotsxyz/xcode-select@v1.1.0
         with:
-          swift-version: "5.6"
+          version: 13.3.1
       
       - name: Merge changes from main into gh-pages
         run: |
