--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -28,7 +28,9 @@ jobs:
         uses: actions/upload-artifact@v3.1.0
         with:
           name: build
-          path: .build
+          path: |
+          .build
+          !.build/checkouts
 
   test:
     runs-on: macos-12
@@ -51,3 +53,12 @@ jobs:
       - name: Test
         run: swift test
 
+  lint:
+    runs-on: macos-12
+    needs: [build]
+
+    steps:
+      - uses: actions/checkout@v1
+
+      - name: SwiftLint
+        uses: norio-nomura/action-swiftlint@3.2.1
