--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -30,7 +30,6 @@ jobs:
           name: build
           path: |
             .build
-            !.build/checkouts
 
   test:
     runs-on: macos-12
@@ -54,7 +53,7 @@ jobs:
         run: swift test
 
   lint:
-    runs-on: macos-12
+    runs-on: ubuntu-latest
     needs: [build]
 
     steps:
