--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -10,7 +10,10 @@ on:
 jobs:
   build:
     # The type of runner that the job will run on
-    runs-on: macos-12
+    strategy:
+      matrix:
+        os: [macos-12, ubuntu-latest]
+    runs-on: ${{ matrix.os }}
 
     steps:
       - uses: actions/checkout@v3
@@ -19,6 +22,7 @@ jobs:
         uses: devbotsxyz/xcode-select@v1.1.0
         with:
           version: 13.3.1
+        if: matrix.os == 'macos-12'
 
       # Runs a single command using the runners shell
       - name: Build
