--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build_and_test:
     # The type of runner that the job will run on
     strategy:
       matrix:
@@ -28,9 +28,12 @@ jobs:
       - name: Build
         run: swift build
 
+      - name: Test
+        run: swift test
+
   test:
     runs-on: macos-12
-    needs: [build]
+    needs: [build_and_test]
 
     steps:
       - uses: actions/checkout@v3
@@ -40,8 +43,6 @@ jobs:
         with:
           version: 13.3.1
 
-      - name: Test
-        run: swift test
 
   lint:
     runs-on: ubuntu-latest
