fix (actions): use GitHub access token to init submodules

--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -1,5 +1,8 @@
 name: Lint and Test
 
+env:
+  GH_USER: cryptoAlgorithm
+
 on:
   push:
   pull_request:
@@ -14,6 +17,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      
+      - name: Init submodules
+        env:
+          TOKEN: ${{ secrets.GH_TOKEN }}
+          USER: ${{ env.GH_USER }}
+        run: |
+          git config --system credential.helper store
+          echo "https://$USER:$TOKEN@github.com" > ~/.git-credentials
+          git submodule update --init
 
       - name: Xcode Select
         uses: devbotsxyz/xcode-select@v1.1.0
@@ -30,6 +42,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      
+      - name: Init submodules
+        env:
+          TOKEN: ${{ secrets.GH_TOKEN }}
+          USER: ${{ env.GH_USER }}
+        run: |
+          git config --system credential.helper store
+          echo "https://$USER:$TOKEN@github.com" > ~/.git-credentials
+          git submodule update --init
 
       - name: Xcode Select
         uses: devbotsxyz/xcode-select@v1.1.0
@@ -45,6 +66,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
+      
+      - name: Init submodules
+        env:
+          TOKEN: ${{ secrets.GH_TOKEN }}
+          USER: ${{ env.GH_USER }}
+        run: |
+          git config --system credential.helper store
+          echo "https://$USER:$TOKEN@github.com" > ~/.git-credentials
+          git submodule update --init
 
       - name: SwiftLint
         uses: norio-nomura/action-swiftlint@3.2.1
