fix (actions): unshallow repo before checking out

--- a/.github/workflows/generate-docc.yml
+++ b/.github/workflows/generate-docc.yml
@@ -40,7 +40,9 @@ jobs:
                
       - name: Copy docs build into gh-pages branch
         run: |
+          git fetch --unshallow
           git checkout gh-pages
+          git pull
           rm -Rf *
           rsync -aI $TMPDIR/docs . 
         
