--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -17,7 +17,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      
+
+      - uses: webfactory/ssh-agent@v0.5.4
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
       - name: Init submodules
         env:
           TOKEN: ${{ secrets.GH_TOKEN }}
@@ -42,7 +45,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      
+
+      - uses: webfactory/ssh-agent@v0.5.4
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
       - name: Init submodules
         env:
           TOKEN: ${{ secrets.GH_TOKEN }}
@@ -66,7 +72,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
-      
+
       # Don't need submodules for linting
       - name: SwiftLint
         uses: norio-nomura/action-swiftlint@3.2.1
