--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Sources/DiscordKit/Proto"]
 	path = Sources/DiscordKit/Proto
-	url = https://github.com/SwiftcordApp/protos.git
+	url = git@github.com:SwiftcordApp/protos.git
