--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -1,8 +1,5 @@
 name: Lint and Test
 
-env:
-  GH_USER: cryptoAlgorithm
-
 on:
   push:
   pull_request:
@@ -19,9 +16,9 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Xcode Select
-        uses: devbotsxyz/xcode-select@v1.1.0
+        uses: maxim-lobanov/setup-xcode@v1
         with:
-          version: 13.3.1
+          xcode-version: '14.1'
 
       # Runs a single command using the runners shell
       - name: Build
@@ -35,9 +32,9 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Xcode Select
-        uses: devbotsxyz/xcode-select@v1.1.0
+        uses: maxim-lobanov/setup-xcode@v1
         with:
-          version: 13.3.1
+          xcode-version: '14.1'
 
       - name: Test
         run: swift test
