--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -3,6 +3,7 @@ disabled_rules:
   - unused_closure_parameter
   - multiple_closures_with_trailing_closure
   - large_tuple
+  - todo # TODOs are precisely for reminding me of tasks I'll have to do in the future. If they are flagged as violations, it completely defeats the point.
 opt_in_rules:
 
 force_cast: warning
@@ -10,6 +11,7 @@ force_try: warning
 
 excluded:
   - Sources/DiscordKit/protos
+  - .build
 
 identifier_name:
   min_length:
