patch (actions): cache swift build cache in build and test stages
hopefully this will increase action speed?

--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -21,6 +21,12 @@ jobs:
         with:
           xcode-version: '14.1'
 
+      - name: Cache Swift Build
+        uses: actions/cache@v3
+        with:
+          path: .build
+          key: swift-build-cache
+
       # Runs a single command using the runners shell
       - name: Build
         run: swift build
@@ -36,6 +42,12 @@ jobs:
         uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: '14.1'
+
+      - name: Cache Swift Build
+        uses: actions/cache@v3
+        with:
+          path: .build
+          key: swift-build-cache # -${{ hashFiles('**/*.swift') }}
 
       - name: Test
         run: swift test
