feat (command)!: added cmd handler called for interactions, allowing replies
a struct is passed to a command handler defined thru the resultBuilder, which allows it to make replies and get values of parameters.

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -23,5 +23,9 @@ identifier_name:
   allowed_symbols: ["_"]
 cyclomatic_complexity:
   ignores_case_statements: true
+nesting:
+  type_level:
+    warning: 5
+    error: 8
 
 reporter: "xcode" # reporter type (xcode, json, csv, checkstyle, junit, html, emoji, sonarqube, markdown)
